# DebugInterfacingFunAndProfit

./: DebugInterfacingFunAndProfit.sln  LICENSE  README.md
DebugInterfacingFunAndProfit/: ClassDiagram1.cd  DebugInterfacingFunAndProfit.cpp  DebugInterfacingFunAndProfit.h  DebugInterfacingFunAndProfit.qrc  DebugInterfacingFunAndProfit.rc  DebugInterfacingFunAndProfit.ui  DebugInterfacingFunAndProfit.vcxproj  DebugInterfacingFunAndProfit.vcxproj.filters  IProcessDebugger.h  IQProcessDebugger.h  ITestOMaticClient.h  ProcessDebugger.cpp  ProcessDebugger.h  QProcessDebuggerFactory.cpp  QProcessDebuggerFactory.h  QtExpect.h  SymbolEngine.cpp  SymbolEngine.h  TestOMaticClient.cpp  TestOMaticClient.h  WinProcessDebugger.cpp  WinProcessDebugger.h  main.cpp  stdafx.h
WinTestOMaticServer/: CMakeLists.txt  version.h
WinTestOMaticServer/builds/shared-md/: CMakeLists.txt
WinTestOMaticServer/builds/static-md/: CMakeLists.txt
WinTestOMaticServer/include/WinTestOMaticServer/: stdafx.h
WinTestOMaticServer/src/: WinTestOMaticServer.cpp  dllmain.cpp  stdafx.cpp
